force-app/main/default/objects/OPP_SlipInfo__c/OPP_SlipInfo__c.object-meta.xml
<CustomObject>
    <label>Slip Information</label>
    <nameField>
        <displayFormat>SL-{00000000}</displayFormat>
        <label>Slip Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slip Informations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>