force-app/main/default/objects/OPP_SlipInfo__c/fields/Active_is__c.field-meta.xml
<CustomField>
    <fullName>Active_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>