force-app/main/default/objects/OPP_SlipInfo__c/fields/AddInfo__c.field-meta.xml
<CustomField>
    <fullName>AddInfo__c</fullName>
    <label>Additional Information</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>