force-app/main/default/objects/OPP_SlipInfo__c/fields/AddPhrase_is__c.field-meta.xml
<CustomField>
    <fullName>AddPhrase_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Phrase : &quot;Both dates inclusive&quot;</label>
    <type>Checkbox</type>
</CustomField>