force-app/main/default/objects/OPP_SlipInfo__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>(X)Location</label>
    <type>Address</type>
</CustomField>