force-app/main/default/objects/OPP_SlipInfo__c/fields/Amendments__c.field-meta.xml
<CustomField>
    <fullName>Amendments__c</fullName>
    <label>Amendments</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>