force-app/main/default/objects/OPP_SlipInfo__c/fields/BasisSinged__c.field-meta.xml
<CustomField>
    <fullName>BasisSinged__c</fullName>
    <defaultValue>&quot;Percentage of Whole&quot;</defaultValue>
    <label>(X)Basis of signed lines</label>
    <length>20</length>
    <type>Text</type>
</CustomField>