force-app/main/default/objects/OPP_SlipInfo__c/fields/ClosingHeader_is__c.field-meta.xml
<CustomField>
    <fullName>ClosingHeader_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closing Header</label>
    <type>Checkbox</type>
</CustomField>