force-app/main/default/objects/OPP_SlipInfo__c/fields/ContractDoc__c.field-meta.xml
<CustomField>
    <fullName>ContractDoc__c</fullName>
    <label>Reinsurers contract documentation</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>