force-app/main/default/objects/OPP_SlipInfo__c/fields/CountryOrigin_fm__c.field-meta.xml
<CustomField>
    <fullName>CountryOrigin_fm__c</fullName>
    <formula>TEXT(Opportunity_lk__r.CedantName_lk__r.Country__c)</formula>
    <label>Country of origin</label>
    <type>Text</type>
</CustomField>