force-app/main/default/objects/OPP_SlipInfo__c/fields/CoveredRisk__c.field-meta.xml
<CustomField>
    <fullName>CoveredRisk__c</fullName>
    <label>Covered Risk</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>