force-app/main/default/objects/OPP_SlipInfo__c/fields/CreatedDate_fm__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate_fm__c</fullName>
    <formula>IF(
    NOT(ISBLANK(OriginalCreatedDate__c)), 
    OriginalCreatedDate__c, 
    CreatedDate
)</formula>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>