force-app/main/default/objects/OPP_SlipInfo__c/fields/CRSFinalize__c.field-meta.xml
<CustomField>
    <fullName>CRSFinalize__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finalize</label>
    <type>Checkbox</type>
</CustomField>