force-app/main/default/objects/OPP_SlipInfo__c/fields/CRSGoverningLaw1__c.field-meta.xml
<CustomField>
    <fullName>CRSGoverningLaw1__c</fullName>
    <label>(X)Choice of Law and Jurisdiction1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Country</valueSetName>
    </valueSet>
</CustomField>