force-app/main/default/objects/OPP_SlipInfo__c/fields/CRSGoverningLaw2__c.field-meta.xml
<CustomField>
    <fullName>CRSGoverningLaw2__c</fullName>
    <label>Choice of Law and Jurisdiction2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Country</valueSetName>
    </valueSet>
</CustomField>