force-app/main/default/objects/OPP_SlipInfo__c/fields/CRSInsured__c.field-meta.xml
<CustomField>
    <fullName>CRSInsured__c</fullName>
    <label>Insured</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>