force-app/main/default/objects/OPP_SlipInfo__c/fields/CRSInsured_fm__c.field-meta.xml
<CustomField>
    <fullName>CRSInsured_fm__c</fullName>
    <formula>IF ( Opportunity_lk__r.RecordType.Name &lt;&gt; &quot;Reinsurance&quot;, Opportunity_lk__r.CRSInsured_lk__r.CompanyNameEng__c , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(X)Insured</label>
    <type>Text</type>
</CustomField>