force-app/main/default/objects/OPP_SlipInfo__c/fields/CRSLocation__c.field-meta.xml
<CustomField>
    <fullName>CRSLocation__c</fullName>
    <label>Location</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>