force-app/main/default/objects/OPP_SlipInfo__c/fields/CRSPeriodFrom__c.field-meta.xml
<CustomField>
    <fullName>CRSPeriodFrom__c</fullName>
    <label>Period From</label>
    <type>Date</type>
</CustomField>