force-app/main/default/objects/OPP_SlipInfo__c/fields/CRSPeriodFromTxt__c.field-meta.xml
<CustomField>
    <fullName>CRSPeriodFromTxt__c</fullName>
    <label>Period From</label>
    <length>20</length>
    <type>Text</type>
</CustomField>