force-app/main/default/objects/OPP_SlipInfo__c/fields/CRSPeriodTo__c.field-meta.xml
<CustomField>
    <fullName>CRSPeriodTo__c</fullName>
    <label>Period To</label>
    <type>Date</type>
</CustomField>