force-app/main/default/objects/OPP_SlipInfo__c/fields/CRSPeriodToTxt__c.field-meta.xml
<CustomField>
    <fullName>CRSPeriodToTxt__c</fullName>
    <label>Period To</label>
    <length>20</length>
    <type>Text</type>
</CustomField>