force-app/main/default/objects/OPP_SlipInfo__c/fields/CRSPolicyHolder__c.field-meta.xml
<CustomField>
    <fullName>CRSPolicyHolder__c</fullName>
    <label>Policy Holder</label>
    <length>100</length>
    <type>Text</type>
</CustomField>