force-app/main/default/objects/OPP_SlipInfo__c/fields/CRSPolicyHolder_fm__c.field-meta.xml
<CustomField>
    <fullName>CRSPolicyHolder_fm__c</fullName>
    <formula>IF ( Opportunity_lk__r.RecordType.Name &lt;&gt; &quot;Reinsurance&quot;, Opportunity_lk__r.CRSPolicyholder_lk__r.CompanyNameEng__c   , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Holder</label>
    <type>Text</type>
</CustomField>