force-app/main/default/objects/OPP_SlipInfo__c/fields/CRSPremium__c.field-meta.xml
<CustomField>
    <fullName>CRSPremium__c</fullName>
    <label>Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>