force-app/main/default/objects/OPP_SlipInfo__c/fields/CRSPremiumRate__c.field-meta.xml
<CustomField>
    <fullName>CRSPremiumRate__c</fullName>
    <label>Premium Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>