force-app/main/default/objects/OPP_SlipInfo__c/fields/CRSTerritoryScope1__c.field-meta.xml
<CustomField>
    <fullName>CRSTerritoryScope1__c</fullName>
    <label>(X)Territory Scope1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Country</valueSetName>
    </valueSet>
</CustomField>