force-app/main/default/objects/OPP_SlipInfo__c/fields/CRSTerritoryScope1New__c.field-meta.xml
<CustomField>
    <fullName>CRSTerritoryScope1New__c</fullName>
    <label>Territory Scope1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Country2</valueSetName>
    </valueSet>
</CustomField>