force-app/main/default/objects/OPP_SlipInfo__c/fields/CRSTerritoryScope2__c.field-meta.xml
<CustomField>
    <fullName>CRSTerritoryScope2__c</fullName>
    <label>Territory Scope2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>