force-app/main/default/objects/OPP_SlipInfo__c/fields/CRSTotalSumInsured_rs__c.field-meta.xml
<CustomField>
    <fullName>CRSTotalSumInsured_rs__c</fullName>
    <label>Total Sum Insured(rs)</label>
    <summarizedField>OPP_TSIByLocation__c.InsuredAmount__c</summarizedField>
    <summaryForeignKey>OPP_TSIByLocation__c.SlipInfo_md__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>