force-app/main/default/objects/OPP_SlipInfo__c/fields/CRSTSICheck__c.field-meta.xml
<CustomField>
    <fullName>CRSTSICheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRSTSICheck</label>
    <type>Checkbox</type>
</CustomField>