force-app/main/default/objects/OPP_SlipInfo__c/fields/Deductible__c.field-meta.xml
<CustomField>
    <fullName>Deductible__c</fullName>
    <label>Deductible</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>