force-app/main/default/objects/OPP_SlipInfo__c/fields/DepositPrem__c.field-meta.xml
<CustomField>
    <fullName>DepositPrem__c</fullName>
    <label>Deposit Premium (100%)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>