force-app/main/default/objects/OPP_SlipInfo__c/fields/DocGen_is__c.field-meta.xml
<CustomField>
    <fullName>DocGen_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RI Slip Doc Generated</label>
    <type>Checkbox</type>
</CustomField>