force-app/main/default/objects/OPP_SlipInfo__c/fields/ENDEffectivedDate__c.field-meta.xml
<CustomField>
    <fullName>ENDEffectivedDate__c</fullName>
    <label>Endorsement Effective Date</label>
    <type>Date</type>
</CustomField>