force-app/main/default/objects/OPP_SlipInfo__c/fields/ExtensionClauses__c.field-meta.xml
<CustomField>
    <fullName>ExtensionClauses__c</fullName>
    <label>Extension Clauses</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>