force-app/main/default/objects/OPP_SlipInfo__c/fields/FinalRISlip_is__c.field-meta.xml
<CustomField>
    <fullName>FinalRISlip_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final RI Slip</label>
    <type>Checkbox</type>
</CustomField>