force-app/main/default/objects/OPP_SlipInfo__c/fields/ForeignEx__c.field-meta.xml
<CustomField>
    <fullName>ForeignEx__c</fullName>
    <defaultValue>&quot;Reinsurers hereon note that the sum(s) insured, limit(s), deductible(s) and premium of this Policy may be denominated in a currency other than the Local Official Currency which has to be in accordance with the local legislation requirements.&quot;
&amp;BR()&amp;BR()&amp;
&quot;The reinsurance premium will be collectable in the amount of Local Currency equivalent to the Local Central Bank’s (or its Equivalent) exchange rate of the currency of the reinsurance at the date of premium payment by the insured.&quot;
&amp;BR()&amp;BR()&amp;
&quot;LK Re assumes no responsibility for exchange rate fluctuations and should premium payment to Reinsurers be required in a currency other than the Local Official Currency, Reinsurers agree to accept an amount which is the equivalent of the Local Currency premium received by LK Re calculated at the Local Central Bank’s (or its Equivalent) exchange rate on the date of payment by LK Re to the Reinsurers.&quot;</defaultValue>
    <label>(X)Foreign exchange clause (reinsuranc</label>
    <length>880</length>
    <type>LongTextArea</type>
</CustomField>