force-app/main/default/objects/OPP_SlipInfo__c/fields/FormattedPeriodFrom_fm__c.field-meta.xml
<CustomField>
    <fullName>FormattedPeriodFrom_fm__c</fullName>
    <formula>IF(ISBLANK(PeriodFrom__c), &quot;&quot;,
    /* 1. 날짜 + 서수(st, nd, rd, th) 조합 */
    TEXT(DAY(DATEVALUE(PeriodFrom__c))) &amp;
    IF(OR(DAY(DATEVALUE(PeriodFrom__c)) = 11, DAY(DATEVALUE(PeriodFrom__c)) = 12, DAY(DATEVALUE(PeriodFrom__c)) = 13), &quot;th&quot;,
        CASE(MOD(DAY(DATEVALUE(PeriodFrom__c)), 10),
            1, &quot;st&quot;,
            2, &quot;nd&quot;,
            3, &quot;rd&quot;,
            &quot;th&quot;
        )
    ) &amp; &quot; &quot; &amp;

    /* 2. 영문 월 이름 */
    CASE(MONTH(DATEVALUE(PeriodFrom__c)),
        1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;, 4, &quot;April&quot;, 5, &quot;May&quot;, 6, &quot;June&quot;,
        7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, 
        &quot;&quot; /* None 대신 빈 값 */
    ) &amp; &quot; &quot; &amp;

    /* 3. 연도 */
    TEXT(YEAR(DATEVALUE(PeriodFrom__c))) &amp; &quot; (&quot; &amp;

    /* 4. 시간 (HH:mm) - GMT 0 */
    MID(TEXT(PeriodFrom__c), 12, 5) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormattedPeriodFrom_fm</label>
    <type>Text</type>
</CustomField>