force-app/main/default/objects/OPP_SlipInfo__c/fields/GoverningLaw__c.field-meta.xml
<CustomField>
    <fullName>GoverningLaw__c</fullName>
    <label>Choice of Law and Jurisdiction</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Country</valueSetName>
    </valueSet>
</CustomField>