force-app/main/default/objects/OPP_SlipInfo__c/fields/GrossPrem100__c.field-meta.xml
<CustomField>
    <fullName>GrossPrem100__c</fullName>
    <label>(X)Gross Prem(100%)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>