force-app/main/default/objects/OPP_SlipInfo__c/fields/GrossPremDP__c.field-meta.xml
<CustomField>
    <fullName>GrossPremDP__c</fullName>
    <label>(X)Gross Prem(DP Applied)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>