force-app/main/default/objects/OPP_SlipInfo__c/fields/HeaderSlipInfo_lk__c.field-meta.xml
<CustomField>
    <fullName>HeaderSlipInfo_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Header</label>
    <referenceTo>OPP_SlipInfo__c</referenceTo>
    <relationshipLabel>Slip Informations (Header)</relationshipLabel>
    <relationshipName>SlipInformationsByHeader</relationshipName>
    <type>Lookup</type>
</CustomField>