force-app/main/default/objects/OPP_SlipInfo__c/fields/Insured__c.field-meta.xml
<CustomField>
    <fullName>Insured__c</fullName>
    <label>Insured</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>