force-app/main/default/objects/OPP_SlipInfo__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>Interest</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>