force-app/main/default/objects/OPP_SlipInfo__c/fields/IsClosingOrClosedByOppIs_fm__c.field-meta.xml
<CustomField>
    <fullName>IsClosingOrClosedByOppIs_fm__c</fullName>
    <formula>OR(                                                                                                                                                                                                                                                 
      ISPICKVAL(Opportunity_lk__r.StageName, &apos;Closing&apos;),                                                                                                                                                                                                              
      Opportunity_lk__r.IsClosed                                                                                                                                                                                                                                        
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Closing or Closed (Opp)</label>
    <type>Checkbox</type>
</CustomField>