force-app/main/default/objects/OPP_SlipInfo__c/fields/Latest_is__c.field-meta.xml
<CustomField>
    <fullName>Latest_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Latest</label>
    <type>Checkbox</type>
</CustomField>