force-app/main/default/objects/OPP_SlipInfo__c/fields/LimitofLiability__c.field-meta.xml
<CustomField>
    <fullName>LimitofLiability__c</fullName>
    <label>Limit of Liability</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>