force-app/main/default/objects/OPP_SlipInfo__c/fields/Location1__c.field-meta.xml
<CustomField>
    <fullName>Location1__c</fullName>
    <label>(X)Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>