force-app/main/default/objects/OPP_SlipInfo__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>