force-app/main/default/objects/OPP_SlipInfo__c/fields/LossRecord__c.field-meta.xml
<CustomField>
    <fullName>LossRecord__c</fullName>
    <label>Loss Record</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>