force-app/main/default/objects/OPP_SlipInfo__c/fields/OccupancyBiz1__c.field-meta.xml
<CustomField>
    <fullName>OccupancyBiz1__c</fullName>
    <label>Occupancy (business)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>