force-app/main/default/objects/OPP_SlipInfo__c/fields/OccupancyBiz__c.field-meta.xml
<CustomField>
    <fullName>OccupancyBiz__c</fullName>
    <label>Occupancy (business)</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>