force-app/main/default/objects/OPP_SlipInfo__c/fields/Opportunity_lk__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_lk__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Slip Informations</relationshipLabel>
    <relationshipName>Slip_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>