force-app/main/default/objects/OPP_SlipInfo__c/fields/OrderHereon__c.field-meta.xml
<CustomField>
    <fullName>OrderHereon__c</fullName>
    <label>Order Hereon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>