force-app/main/default/objects/OPP_SlipInfo__c/fields/OrderHereon_fm__c.field-meta.xml
<CustomField>
    <fullName>OrderHereon_fm__c</fullName>
    <formula>RICession__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order hereon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>