force-app/main/default/objects/OPP_SlipInfo__c/fields/OriginalCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalCreatedDate__c</fullName>
    <label>Original Created Date</label>
    <type>DateTime</type>
</CustomField>