force-app/main/default/objects/OPP_SlipInfo__c/fields/OtherDeduction__c.field-meta.xml
<CustomField>
    <fullName>OtherDeduction__c</fullName>
    <label>Other Deduction</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>