force-app/main/default/objects/OPP_SlipInfo__c/fields/PeriodFrom__c.field-meta.xml
<CustomField>
    <fullName>PeriodFrom__c</fullName>
    <label>Period From</label>
    <type>DateTime</type>
</CustomField>