force-app/main/default/objects/OPP_SlipInfo__c/fields/PeriodFromTime__c.field-meta.xml
<CustomField>
    <fullName>PeriodFromTime__c</fullName>
    <label>Period From Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>