force-app/main/default/objects/OPP_SlipInfo__c/fields/PeriodTo__c.field-meta.xml
<CustomField>
    <fullName>PeriodTo__c</fullName>
    <label>Period To</label>
    <type>DateTime</type>
</CustomField>