force-app/main/default/objects/OPP_SlipInfo__c/fields/PeriodToTime__c.field-meta.xml
<CustomField>
    <fullName>PeriodToTime__c</fullName>
    <label>Period To Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>