force-app/main/default/objects/OPP_SlipInfo__c/fields/PolicyHolder__c.field-meta.xml
<CustomField>
    <fullName>PolicyHolder__c</fullName>
    <label>Policy Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>