force-app/main/default/objects/OPP_SlipInfo__c/fields/PolicyNo__c.field-meta.xml
<CustomField>
    <fullName>PolicyNo__c</fullName>
    <label>Policy No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>