force-app/main/default/objects/OPP_SlipInfo__c/fields/PolicyType__c.field-meta.xml
<CustomField>
    <fullName>PolicyType__c</fullName>
    <label>Policy Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>