force-app/main/default/objects/OPP_SlipInfo__c/fields/Prem100__c.field-meta.xml
<CustomField>
    <fullName>Prem100__c</fullName>
    <label>PREMIUM (100%)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>