force-app/main/default/objects/OPP_SlipInfo__c/fields/PremiumPaymentTermDays__c.field-meta.xml
<CustomField>
    <fullName>PremiumPaymentTermDays__c</fullName>
    <label>Premium Payment Term Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>