force-app/main/default/objects/OPP_SlipInfo__c/fields/PremiumPaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PremiumPaymentTerms__c</fullName>
    <label>Premium Payment Terms</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>