force-app/main/default/objects/OPP_SlipInfo__c/fields/PremPaymentClause_fm__c.field-meta.xml
<CustomField>
    <fullName>PremPaymentClause_fm__c</fullName>
    <formula>&quot;Notwithstanding any provision to the contrary within this contract or any endorsement hereto, in respect of non- payment of premium only the following clause will apply.&quot;
&amp;BR()&amp;BR()&amp;
&quot;The (Re)Insured undertakes that premium will be paid in full to (Re)Insurers within &quot;&amp; TEXT(PremiumPaymentTermDays__c) &amp;&quot;days of inception of this contract (or, in respect of instalment premiums, when due).&quot;
&amp;BR()&amp;BR()&amp;
&quot;If the premium due under this contract has not been so paid to (Re)Insurers by the &quot; &amp; TEXT(PremiumPaymentTermDays__c) &amp;&quot;th day from the inception of this contract (and, in respect of instalment premiums, by the date they are due) (Re)Insurers shall have the right to cancel this contract by notifying the (Re)Insured via the broker in writing. In the event of cancellation, premium is due to (Re)Insurers on a pro rata basis for the period that (Re)Insurers are on risk but the full contract premium shall be payable to (Re)Insurers in the event of a loss or occurrence prior to the date of termination which gives rise to a valid claim under this contract.&quot;
&amp;BR()&amp;BR()&amp;
&quot;It is agreed that (Re)Insurers shall give not less than 30 days prior notice of cancellation to the (Re)Insured via the broker.  If premium due is paid in full to (Re)Insurers before the notice period expires, notice of cancellation shall automatically be revoked. If not, the contract shall automatically terminate at the end of the notice period.&quot;
&amp;BR()&amp;BR()&amp;
&quot;If any provision of this clause is found by any court or administrative body of competent jurisdiction to be invalid or unenforceable, such invalidity or unenforceability will not affect the other provisions of this clause which will remain in full force and effect.&quot;
&amp;BR()&amp;BR()&amp;
&quot;30/09/08&quot;	
&amp;BR()&amp;
&quot;LSW3001&quot;</formula>
    <label>Premium Payment Clause</label>
    <type>Text</type>
</CustomField>