force-app/main/default/objects/OPP_SlipInfo__c/fields/Recording__c.field-meta.xml
<CustomField>
    <fullName>Recording__c</fullName>
    <label>Recording, transmitting and storing info</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>