force-app/main/default/objects/OPP_SlipInfo__c/fields/ReinsCondition__c.field-meta.xml
<CustomField>
    <fullName>ReinsCondition__c</fullName>
    <label>Reinsurance conditions</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>