force-app/main/default/objects/OPP_SlipInfo__c/fields/ReinsLiability__c.field-meta.xml
<CustomField>
    <fullName>ReinsLiability__c</fullName>
    <defaultValue>&quot;Reinsurer’s Liability Clause – LMA3333&quot;
&amp;BR()&amp;BR()&amp;
&quot;(RE)INSURERS LIABILITY CLAUSE (Re)insurer’s liability several not joint&quot;
&amp;BR()&amp;
&quot;The liability of a (re)insurer under this contract is several and not joint with other (re)insurers party to this contract. A (re)insurer is liable only for the proportion of liability it has underwritten. A (re)insurer is not jointly liable for the proportion of liability underwritten by any other (re)insurer. Nor is a (re)insurer otherwise responsible for any liability of any other (re)insurer that may underwrite this contract.&quot;
&amp;BR()&amp;BR()&amp;
&quot;The proportion of liability under this contract underwritten by a (re)insurer (or, in the case of a Lloyd`s syndicate, the total of the proportions underwritten by all the members of the syndicate taken together) is shown next to its stamp. This is subject always to the provision concerning “signing” below.&quot;
&amp;BR()&amp;BR()&amp;
&quot; In the case of a Lloyd`s syndicate, each member of the syndicate (rather than the syndicate itself) is a (re)insurer. Each member has underwritten a proportion of the total shown for the syndicate (that total itself being the total of the proportions underwritten by all the members of the syndicate taken together). The liability of each member of the syndicate is several and not joint with other members. A member is liable only for that member`s proportion. A member is not jointly liable for any other member`s proportion. Nor is any member otherwise responsible for any liability of any other (re)insurer that may underwrite this contract. The business address of each member is Lloyd`s, One Lime Street, London EC3M 7HA. The identity of each member of a Lloyd`s syndicate and their respective proportion may be obtained by writing to Market Services, Lloyd`s, at the above address.&quot;
&amp;BR()&amp;BR()&amp;
&quot;Proportion of liability&quot;
&amp;BR()&amp;BR()&amp;
&quot;Unless there is “signing” (see below), the proportion of liability under this contract underwritten by each (re)insurer (or, in the case of a Lloyd`s syndicate, the total of the proportions underwritten by all the members of the syndicate taken together) is shown next to its stamp and is referred to as its “written line”.&quot;
&amp;BR()&amp;BR()&amp;
&quot;Where this contract permits, written lines, or certain written lines, may be adjusted (“signed”). In that case a schedule is to be appended to this contract to show the definitive proportion of liability under this contract underwritten by each (re)insurer (or, in the case of a Lloyd`s syndicate, the total of the proportions underwritten by all the members of the syndicate taken together). A definitive proportion (or, in the case of a Lloyd`s syndicate, the total of the proportions underwritten by all the members of a Lloyd`s syndicate taken together) is referred to as a “signed line”. The signed lines shown in the schedule will prevail over the written lines unless a proven error in calculation has occurred.&quot;
&amp;BR()&amp;BR()&amp;
&quot;Although reference is made at various points in this clause to “this contract” in the singular, where the circumstances so require this should be read as a reference to contracts in the plural.&quot;
&amp;BR()&amp;BR()&amp;
&quot;LMA3333&quot;
&amp;BR()&amp;
&quot;21 June 2007&quot;</defaultValue>
    <label>(X)Reinsurer’s liability</label>
    <length>3040</length>
    <type>LongTextArea</type>
</CustomField>