force-app/main/default/objects/OPP_SlipInfo__c/fields/ReinsSigned__c.field-meta.xml
<CustomField>
    <fullName>ReinsSigned__c</fullName>
    <label>(X)Reinsurers signed lines</label>
    <length>1</length>
    <type>Text</type>
</CustomField>